erDiagram
    %% =========================================================================
    %% N.E.X.U.S. - DIAGRAMA ENTIDAD-RELACIÓN CANÓNICO (ESPECIFICACIÓN v1.0)
    %% Aplicación Django única nexus, 9 dominios conceptuales + SQLite / PostgreSQL
    %% =========================================================================

    %% -------------------------------------------------------------------------
    %% APP 1: IDENTITY (Autenticación y RBAC)
    %% -------------------------------------------------------------------------
    CUSTOM_USER {
        bigint id PK
        varchar_255 email UK "db_index, Unique Identifier"
        varchar_150 first_name
        varchar_150 last_name
        varchar_30 role "STUDENT | TUTOR | COMMITTEE_MEMBER | PROGRAM_COORDINATOR | ACADEMIC_ADMIN | SYSTEM_ADMIN"
        varchar_20 grammatical_gender "MASCULINE | FEMININE | NEUTRAL | UNSPECIFIED"
        boolean is_active "Default: True"
        boolean is_staff "Default: False"
        boolean is_superuser "Default: False"
        varchar_128 password "PBKDF2/Argon2 Hash"
        datetime last_login "Nullable"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    %% -------------------------------------------------------------------------
    %% APP 2: STUDENTS (Padrón Estudiantil, Semestres y Comités)
    %% -------------------------------------------------------------------------
    STUDENT {
        bigint id PK
        bigint user_id FK,UK "Nullable, OneToOne -> CUSTOM_USER"
        varchar_20 matricula UK "db_index, Unique Identifier"
        varchar_255 nombre_completo
        varchar_255 programa_doctoral "Default: Doctorado en Ciencias"
        varchar_20 cohorte "ej. 2023-A, 2024-B"
        boolean estatus_activo "Default: True"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    SEMESTER {
        bigint id PK
        bigint student_id FK "FK -> STUDENT (CASCADE)"
        smallint numero "Validator: 1 <= numero <= 6"
        date fecha_inicio
        date fecha_fin
        boolean is_active "Default: True"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    ACADEMIC_COMMITTEE {
        bigint id PK
        bigint student_id FK,UK "OneToOne -> STUDENT (CASCADE)"
    }

    COMMITTEE_MEMBERSHIP {
        bigint id PK
        bigint committee_id FK "FK -> ACADEMIC_COMMITTEE (CASCADE)"
        bigint user_id FK "FK -> CUSTOM_USER (CASCADE)"
        varchar_30 role "ASESOR | COASESOR | COMMITTEE_MEMBER"
    }

    %% -------------------------------------------------------------------------
    %% APP 3: TUTORING (Sesiones de Acompañamiento y Asistencias)
    %% -------------------------------------------------------------------------
    TUTORING_SESSION {
        bigint id PK
        bigint student_id FK "FK -> STUDENT (CASCADE)"
        bigint semester_id FK "FK -> SEMESTER (CASCADE)"
        date fecha_sesion "db_index"
        varchar_20 modalidad "PRESENCIAL | VIRTUAL | HIBRIDA"
        text resumen "Contenido y acuerdos tratados"
        date proxima_reunion_fecha "Nullable"
        text proxima_reunion_notas "Default: empty"
        bigint created_by_id FK "Nullable, FK -> CUSTOM_USER (SET_NULL)"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    TUTORING_PARTICIPANT {
        bigint id PK
        bigint session_id FK "FK -> TUTORING_SESSION (CASCADE)"
        bigint user_id FK "FK -> CUSTOM_USER (CASCADE)"
        varchar_30 rol_en_sesion "ESTUDIANTE | ASESOR_PRINCIPAL | COASESOR | MIEMBRO_COMITE"
        boolean asistencia "Default: True"
        varchar_255 notas "Default: empty"
    }

    %% -------------------------------------------------------------------------
    %% APP 4: AGREEMENTS (Acuerdos, Compromisos y Auditoría)
    %% -------------------------------------------------------------------------
    AGREEMENT {
        bigint id PK
        bigint session_id FK "Nullable, FK -> TUTORING_SESSION (SET_NULL)"
        bigint student_id FK "FK -> STUDENT (CASCADE), db_index"
        text descripcion
        bigint responsable_id FK "FK -> CUSTOM_USER (CASCADE)"
        date fecha_limite "db_index"
        varchar_20 estado "PENDIENTE | EN_PROCESO | CONCLUIDO; VENCIDO derivado (db_index)"
        date fecha_conclusion "Nullable"
        bigint created_by_id FK "Nullable, FK -> CUSTOM_USER (SET_NULL)"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    AGREEMENT_AUDIT_LOG {
        bigint id PK
        bigint agreement_id FK "FK -> AGREEMENT (CASCADE)"
        bigint user_id FK "Nullable, FK -> CUSTOM_USER (SET_NULL)"
        varchar_20 estado_anterior
        varchar_20 estado_nuevo
        text comentario "Default: empty"
        datetime fecha_cambio "auto_now_add"
    }

    %% -------------------------------------------------------------------------
    %% APP 5: THESIS (Avances Cuantitativos y Desglose por Componentes)
    %% -------------------------------------------------------------------------
    THESIS_PROGRESS {
        bigint id PK
        bigint student_id FK "FK -> STUDENT (CASCADE), db_index"
        bigint semester_id FK "FK -> SEMESTER (CASCADE), db_index"
        smallint porcentaje_avance "0 <= porcentaje <= 100"
        json componentes_json "{protocolo, estadoArte, marcoTeorico, metodologia, analisis, redaccion}"
        text observaciones "Default: empty"
        date fecha_registro "Default: now, db_index"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    %% -------------------------------------------------------------------------
    %% APP 6: EVIDENCE (Repositorio Documental y Enlaces DOI)
    %% -------------------------------------------------------------------------
    EVIDENCE {
        bigint id PK
        bigint student_id FK "FK -> STUDENT (CASCADE), db_index"
        bigint semester_id FK "Nullable, FK -> SEMESTER (SET_NULL)"
        varchar_20 tipo "ARCHIVO_LOCAL | ENLACE_DOI (db_index)"
        varchar_20 actividad_tipo "TUTORIA | ACUERDO | TESIS | OTRO (db_index)"
        bigint actividad_id "Nullable, ID polimórfico de actividad vinculada (db_index)"
        varchar_255 titulo
        text descripcion "Default: empty"
        varchar_100 archivo_adjunto "Nullable, Ruta al archivo (Max: 15 MiB)"
        varchar_500 enlace_url "Nullable, URL o formato DOI"
        varchar_100 mime_type "ej. application/pdf, image/png"
        bigint file_size_bytes "Default: 0"
        date fecha_carga "Default: now, db_index"
        bigint created_by_id FK "Nullable, FK -> CUSTOM_USER (SET_NULL)"
        datetime created_at "auto_now_add"
    }

    %% -------------------------------------------------------------------------
    %% APP 7: ACADEMIC OUTPUT (Producción Científica, Ponencias, Estancias)
    %% -------------------------------------------------------------------------
    PUBLICATION {
        bigint id PK
        bigint student_id FK "FK -> STUDENT (CASCADE), db_index"
        bigint semester_id FK "Nullable, FK -> SEMESTER (SET_NULL)"
        varchar_255 titulo
        text autores_texto "Formato APA / IEEE"
        varchar_30 tipo "ARTICULO_JCR | ARTICULO_CONACYT | CAPITULO_LIBRO | OTRO"
        varchar_255 revista_editorial
        varchar_30 estado "PREPARACION | ENVIADO | EN_REVISION | ACEPTADO | PUBLICADO"
        date fecha_publicacion "Nullable, db_index"
        varchar_500 doi_url "Default: empty"
        bigint evidencia_id FK "Nullable, FK -> EVIDENCE (SET_NULL)"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    ACADEMIC_EVENT {
        bigint id PK
        bigint student_id FK "FK -> STUDENT (CASCADE), db_index"
        bigint semester_id FK "Nullable, FK -> SEMESTER (SET_NULL)"
        varchar_40 tipo_evento "CONGRESO_NACIONAL | CONGRESO_INTERNACIONAL | COLOQUIO"
        varchar_255 nombre_evento
        varchar_255 titulo_ponencia
        date fecha_presentacion "db_index"
        varchar_255 sede_lugar
        varchar_20 modalidad "PRESENCIAL | VIRTUAL | HIBRIDA"
        bigint evidencia_id FK "Nullable, FK -> EVIDENCE (SET_NULL)"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    RESEARCH_STAY {
        bigint id PK
        bigint student_id FK "FK -> STUDENT (CASCADE), db_index"
        varchar_255 institucion_receptora
        varchar_100 pais
        date fecha_inicio "db_index"
        date fecha_fin
        varchar_255 responsable_estancia
        text objetivos "Default: empty"
        text resultados "Default: empty"
        bigint evidencia_id FK "Nullable, FK -> EVIDENCE (SET_NULL)"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    OTHER_PRODUCT {
        bigint id PK
        bigint student_id FK "FK -> STUDENT (CASCADE), db_index"
        varchar_30 tipo_producto "SOFTWARE | PROTOTIPO | PATENTE | BASE_DATOS | OTRO"
        varchar_255 titulo
        text descripcion
        date fecha_registro "Default: now, db_index"
        bigint evidencia_id FK "Nullable, FK -> EVIDENCE (SET_NULL)"
        datetime created_at "auto_now_add"
        datetime updated_at "auto_now"
    }

    %% -------------------------------------------------------------------------
    %% RELACIONES ENTRE TABLAS (Cardinalidad y Llaves Foráneas)
    %% -------------------------------------------------------------------------

    %% Identity & Students
    CUSTOM_USER ||--o| STUDENT : "asigna perfil a (1:1)"
    STUDENT ||--o{ SEMESTER : "cursa (1:N, Unique[student, numero])"
    STUDENT ||--o| ACADEMIC_COMMITTEE : "tiene comité agrupado (1:0..1)"
    ACADEMIC_COMMITTEE ||--o{ COMMITTEE_MEMBERSHIP : "agrupa membresías (1:N; máximo un COASESOR)"
    CUSTOM_USER ||--o{ COMMITTEE_MEMBERSHIP : "participa con cargo (1:N)"

    %% Tutoring
    STUDENT ||--o{ TUTORING_SESSION : "recibe sesiones (1:N)"
    SEMESTER ||--o{ TUTORING_SESSION : "agrupa sesiones de (1:N)"
    CUSTOM_USER ||--o{ TUTORING_SESSION : "registra como tutor/admin (1:N)"
    TUTORING_SESSION ||--o{ TUTORING_PARTICIPANT : "contiene asistentes (1:N)"
    CUSTOM_USER ||--o{ TUTORING_PARTICIPANT : "asiste como participante (1:N)"

    %% Agreements
    TUTORING_SESSION ||--o{ AGREEMENT : "deriva compromisos (0..1:N)"
    STUDENT ||--o{ AGREEMENT : "comprometido en (1:N)"
    CUSTOM_USER ||--o{ AGREEMENT : "es responsable de (1:N)"
    CUSTOM_USER ||--o{ AGREEMENT : "creó acuerdo (1:N)"
    AGREEMENT ||--o{ AGREEMENT_AUDIT_LOG : "registra historial de cambios (1:N)"
    CUSTOM_USER ||--o{ AGREEMENT_AUDIT_LOG : "autor de transición (1:N)"

    %% Thesis
    STUDENT ||--o{ THESIS_PROGRESS : "registra avances de (1:N)"
    SEMESTER ||--o{ THESIS_PROGRESS : "asocia avance a semestre (1:N)"

    %% Evidence
    STUDENT ||--o{ EVIDENCE : "posee archivos y DOIs (1:N)"
    SEMESTER ||--o{ EVIDENCE : "contextualiza evidencia en (1:N)"
    CUSTOM_USER ||--o{ EVIDENCE : "carga evidencia (1:N)"

    %% Academic Output
    STUDENT ||--o{ PUBLICATION : "publica (1:N)"
    SEMESTER ||--o{ PUBLICATION : "periodo de publicación (1:N)"
    EVIDENCE ||--o{ PUBLICATION : "soporta documentalmente a (0..1:N)"

    STUDENT ||--o{ ACADEMIC_EVENT : "presenta ponencias en (1:N)"
    SEMESTER ||--o{ ACADEMIC_EVENT : "periodo de ponencia (1:N)"
    EVIDENCE ||--o{ ACADEMIC_EVENT : "soporta documentalmente a (0..1:N)"

    STUDENT ||--o{ RESEARCH_STAY : "realiza estancias (1:N)"
    EVIDENCE ||--o{ RESEARCH_STAY : "soporta documentalmente a (0..1:N)"

    STUDENT ||--o{ OTHER_PRODUCT : "desarrolla prototipos/patentes (1:N)"
    EVIDENCE ||--o{ OTHER_PRODUCT : "soporta documentalmente a (0..1:N)"
